--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -130,14 +130,14 @@
         width: 50px;
         height: 50px;
         background: #999999 url('https://images.tcdn.com.br/img/arquivos/mobile/images/mobile/conta-tema.png?v=2') no-repeat center center  !important;
-        float: left;
+        display: inline-block;
     }
 
     .hamburguer {
         width: 50px;
         height: 50px;
         background: #999999 url('https://images.tcdn.com.br/img/arquivos/mobile/images/mobile/hamburguer-tema.png?v=2') no-repeat center center  !important;
-        float: right;
+        display: inline-block;
     }
 
     #logotipo {
