--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -246,7 +246,7 @@
         height: 47px;
         padding: 0 2%;
         width: 100%;
-        background: #fff;
+        background: #f1f1f1;
         float: right;
         margin:0px;
     }
