--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -236,6 +236,7 @@
         width: 81%;
         display: inline-block;
         vertical-align: middle;
+        border-radius: initial;
 
     }
 
@@ -243,7 +244,7 @@
         font-size: 16px;
         border-radius: initial !important;
         font-weight: normal;
-        height: 47px;
+        height: 40px;
         padding: 0 2%;
         width: 100%;
         background: #f1f1f1;
