--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -129,6 +129,7 @@
 
     .menu-conta {
         max-width: 50px;
+        min-width: 50px;
         height: 50px;
         background: #999999 url('https://images.tcdn.com.br/img/arquivos/mobile/images/mobile/conta-tema.png?v=2') no-repeat center center  !important;
         display: table-cell;
@@ -137,6 +138,7 @@
 
     .hamburguer {
         max-width: 50px;
+        min-width: 50px;
         height: 50px;
         background: #999999 url('https://images.tcdn.com.br/img/arquivos/mobile/images/mobile/hamburguer-tema.png?v=2') no-repeat center center  !important;
         display: table-cell;
