--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -255,6 +255,7 @@
         margin:0px;
         display: table-cell;
         width: 100%;
+        float: none !important;
     }
 
     .busca-botao {
@@ -262,6 +263,7 @@
         margin: 0 5px 0 -9px !important;
         border: 0 none;
         color: #fff;
+        float: none !important;
         font-size: 16px;
         font-weight: bold;
         height: 40px;
