--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -231,12 +231,13 @@
        width: 100%;
        display: table;
        vertical-align: middle;
+       position: relative;
     }
     .caixa-busca label {
         border: none;
         padding: 0 !important;
         position: relative;
-        width: 90%;
+        width: 100%;
         display: inline-block;
         vertical-align: middle;
         border-radius: initial;
@@ -248,7 +249,7 @@
         font-size: 16px;
         border-radius: initial !important;
         font-weight: normal;
-        height: 40px;
+        height: 50px;
         padding: 0 2%;
         width: 100%;
         background: #fff;
