--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -268,7 +268,8 @@
         font-size: 16px;
         font-weight: bold;
         height: 40px;
-        display: table-cell;
+        position: absolute;
+        right: 0;
         width: 10%;
         border-radius: initial !important;
         font-size: 0;
