--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -270,7 +270,7 @@
         height: 40px;
         position: absolute;
         right: 0;
-        width: 10%;
+        width: 40px.
         border-radius: initial !important;
         font-size: 0;
     }
