--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -265,14 +265,15 @@
         border: 0 none;
         color: #fff;
         float: none !important;
-        font-size: 16px;
+        font-size: 0;
         font-weight: bold;
-        height: 40px;
+        height: 50px;
         position: absolute;
         right: 0;
-        width: 40px.
+        width: 40px;
         border-radius: initial !important;
         font-size: 0;
+        z-index: 1;
     }
 
     .icon-busca {
