--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -569,6 +569,7 @@
     
     .produto-preco .precoAvista {
         font-size: 16px !important;
+        color: #049dbd !important;;
     }
 
     .vitrine-nome, 
