--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -537,7 +537,7 @@
     }
 
     .vitrine-geral .por-preco {
-        color: #666 !important;
+        color: #049dbd !important;
     }
 
     .vitrine-parcela, .vitrine-parcela strong, .vitrine-parcela .precoAvista, .vitrine-parcela .color {
