--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -541,7 +541,7 @@
     }
 
     .vitrine-parcela, .vitrine-parcela strong, .vitrine-parcela .precoAvista, .vitrine-parcela .color {
-        color: #666 !important;
+        color: #049dbd !important;
     }
 
     .botoes-extras {
