--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -552,6 +552,7 @@
         background:  #049DBD;
         color: #fff;
         float: right;
+        border: none !important;
     }
 
     .botoes-extras {
