--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -860,6 +860,8 @@
         display: block;
         background: #999999;
         padding: 10px 5px ;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
     }
 
     .caixa-cadastro-titulo {
