--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -835,7 +835,7 @@
 
     .recuperar-senha {
         float: left;
-        margin: -72px 0 0;
+        margin: 0 0 0;
         width: 122px !important;
     }
 
