--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -553,6 +553,7 @@
         color: #fff;
         float: right;
         border: none !important;
+        margin-top: 20px;
     }
 
     .botoes-extras {
