--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -824,6 +824,7 @@
         display: block;
         background: #fff !important;
         margin-top: 10px;
+        margin-bottom: 10px;
     }
     
     #Page .caixa-login br {
