--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -814,6 +814,13 @@
         margin: 0 !important;
         max-width: 100% !important;
     }
+    
+    .email_login_erro {
+        display: block;
+        background:  red;
+        color: #fff;
+        padding: 5px;
+    }
 
     .board .caixa-login #email_login , .board .caixa-login #senha_login , .caixa-cadastro #email_cadastro {
         height: 40px !important;
