--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -820,6 +820,9 @@
         background:  red;
         color: #fff;
         padding: 5px;
+        border: none;
+        margin: 0;
+        width: 100%;
     }
 
     .board .caixa-login #email_login , .board .caixa-login #senha_login , .caixa-cadastro #email_cadastro {
