--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -6,6 +6,7 @@
     * {
         font-family: 'Open Sans', sans-serif !important;
         box-sizing: border-box;
+        font-weight: normal;
     }
 
     body {
