--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -15,6 +15,7 @@
         overflow-x: hidden;
         background: #fff !important;
         background-image: none !important;
+        font-weight: normal;
     }
 
     .board {
