--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -946,7 +946,7 @@
     #CadastroAbas .aberta a {
         background: #f6f6f6 !important;
         padding: 10px 15px;
-        margin-top: 20px;
+        margin-top: 0;
         border: none;
         display: block;
     }
