--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -10,13 +10,13 @@
     }
     
     a {
-        color: #666;
+        color: #666 !important;
         
     }
     
     a:hover {
-        text-decoration: none;
-        color: #666;
+        text-decoration: none !important;
+        color: #666 !important;
     }
 
     body {
