--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -18,6 +18,10 @@
         text-decoration: none !important;
         color: #666 !important;
     }
+    
+    #topBorder{
+        background: none;
+    }
 
     body {
         width: 100% !important;
