--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -10,13 +10,13 @@
     }
     
     a {
-        color: #666 !important;
+        color: #049DBD !important;
         
     }
     
     a:hover {
         text-decoration: none !important;
-        color: #666 !important;
+        color: #049dbd !important;
     }
     
     .topBorder, .leftCorner{
