--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -19,6 +19,10 @@
         color: #049dbd !important;
     }
     
+    .carrinho-separador-basico {
+        color: #049dbd !important;
+    }
+    
     .topBorder, .leftCorner{
         background: none;
     }
