--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1092,7 +1092,7 @@
     }
 
     
-    #menu-esquerdo a {
+    #menu-esquerdo ul > li > a {
         color: #fff !important;
     }
     .icoFilho p {
