--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1596,6 +1596,7 @@
         font-size: 16px !important;
         margin-top: 10px !important;
         font-family: 'Open Sans', sans-serif !important;
+        background: #eee;
     }
 
     #tabela_carrinho td {
