--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1764,6 +1764,8 @@
         height: 36px;
         display: block;
         margin-bottom: 20px;
+        border: none;
+        font-size: 0;
     }
 
     .bt-avancar img {
