--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1708,6 +1708,10 @@
 
     #formas_envio_frete tr td:first-child + td + td {
     }
+    
+    #formas_envio_frete img {
+        display: none;
+    }
 
     #Page .caixa-cupom, #Page .caixa-cupom + th, #Page .caixa-cupom + th + th {
         border-bottom: 15px solid #fff;
@@ -1766,6 +1770,10 @@
         margin-bottom: 20px;
         border: none;
         font-size: 0;
+    }
+    
+    .botao-prosseguir-compra {
+        margin: 0:
     }
 
     .bt-avancar img {
