--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1778,6 +1778,8 @@
     
     .botao-prosseguir-compra {
         margin: 0 !important;
+        border-radius: 5px;
+        text-transform: capitalize;
     }
 
     .bt-avancar img {
