--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1691,6 +1691,9 @@
         color: #666;
     }
 
+    #formas_envio_frete .valores_carrinho {
+        margin-top: -20px;
+    }
     #formas_envio_frete td {
         border: 0 none;
         display: inline-block;
