--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1701,7 +1701,7 @@
     .caixa-total h3, .caixa-total .valores_carrinho, .caixa-total .tit-total {
         font-size: 18px !important;
         float: none;
-        margin: 0 !important;
+        margin: 8px 0 0 0 !important;
     }
 
     #formas_envio_frete .valores_carrinho {
