--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1319,7 +1319,7 @@
     }
     .produto-wrapper .seletorH2{
         font-size: 16px;
-        margin-top: 20px;
+        margin: 20px 0;
         display: block;
     }
 
