--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1656,6 +1656,7 @@
         border-radius: 5px 5px 0 0;
         font-weight: normal;
         font-size: 14px;
+        padding: 5px;
     }
 
     #calculoFrete {
