--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1668,7 +1668,7 @@
         display: block !important;
     }
     
-    .caixa-forma-frete .blocoAlerta a {
+    .caixa-forma-frete a {
         display: #fff !important;
     }
 
