--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1672,6 +1672,7 @@
         color: #fff !important;
         display: block;
         background-color: #ff6666;
+        margin: 10px 0;
     }
 
     #calculoFrete {
