--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -1894,6 +1894,10 @@
         padding-bottom: 11px;
         padding-top: 45px;
     }
+    
+    .carrinho-heading {
+        display: none;
+    }
 
     .caixa-formas-pagamento {
         display: block;
