--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -10,13 +10,13 @@
     }
     
     a {
-        color: #049DBD !important;
+       
         
     }
     
     a:hover {
         text-decoration: none !important;
-        color: #049dbd !important;
+      
     }
     
     .carrinho-separador-basico {
@@ -1539,6 +1539,7 @@
         margin: 0 !important;
     }
 
+    .caixa-detalhes-compra 
     /* Navegados */
 
     .change {
