--- a/tema-mobile.css
+++ b/tema-mobile.css
@@ -309,8 +309,10 @@
     .icon-carrinho {
         display: none;
     }
-    #menu-esquerdo .bg-tone-1 {
-        background-color: #999 !important;
+    .menu-esquerdo h3 {
+        background: #666 !important;
+        color: #fff !important;
+        overflow: hidden;
     }
     
     .menu-esquerdo {
